--- a/css/main.css
+++ b/css/main.css
@@ -443,3 +443,30 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/* line 1, ../sass/partial/_base.scss */
+table {
+  margin: 10px;
+  border: 1px solid #dddddd;
+  border-collapse: collapse;
+  border-spacing: 2px;
+  width: 98%;
+}
+
+/* line 9, ../sass/partial/_base.scss */
+table tr:nth-child(even) {
+  background-color: #dee3f8;
+}
+
+/* line 13, ../sass/partial/_base.scss */
+table td, table th {
+  font-size: 0.875em;
+  padding: 5px 5px;
+}
+
+/* line 18, ../sass/partial/_base.scss */
+table th {
+  background-color: #2541b2;
+  color: white;
+  text-align: left;
+}
