--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,8 @@ audio,
 canvas,
 video {
   display: inline-block;
+  *display: inline;
+  *zoom: 1;
 }
 
 /**
@@ -66,10 +68,24 @@ template {
 html {
   font-family: sans-serif;
   /* 1 */
+  font-size: 100%;
+  /* 3 */
   -ms-text-size-adjust: 100%;
   /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
+}
+
+/**
+ * Address `font-family` inconsistency between `textarea` and other form
+ * elements.
+ */
+/* line 139, ../sass/vendor/_normalize.scss */
+button,
+input,
+select,
+textarea {
+  font-family: sans-serif;
 }
 
 /**
@@ -112,6 +128,21 @@ a:hover {
    Typography
    ========================================================================== */
 /**
+ * Set 1 unit of vertical rhythm on the top and bottom margin.
+ */
+/* line 191, ../sass/vendor/_normalize.scss */
+p,
+pre {
+  margin: 1.5em 0;
+}
+
+/* line 195, ../sass/vendor/_normalize.scss */
+blockquote {
+  /* Set 1 unit of vertical rhythm on the top and bottom margin. */
+  margin: 1.5em 40px;
+}
+
+/**
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari 5, and Chrome.
  */
@@ -119,9 +150,50 @@ a:hover {
 h1 {
   /* Set the font-size and line-height while keeping a proper vertical rhythm. */
   font-size: 2em;
+  line-height: 1.125em;
   /* Set 1 unit of vertical rhythm on the top and bottom margins. */
   margin-top: 0.75em;
   margin-bottom: 0.75em;
+}
+
+/* line 221, ../sass/vendor/_normalize.scss */
+h2 {
+  font-size: 1.5em;
+  line-height: 1.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+/* line 227, ../sass/vendor/_normalize.scss */
+h3 {
+  font-size: 1.17em;
+  line-height: 1.28205em;
+  margin-top: 1.28205em;
+  margin-bottom: 1.28205em;
+}
+
+/* line 233, ../sass/vendor/_normalize.scss */
+h4 {
+  font-size: 1em;
+  line-height: 1.5em;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+/* line 239, ../sass/vendor/_normalize.scss */
+h5 {
+  font-size: 0.83em;
+  line-height: 1.80723em;
+  margin-top: 1.80723em;
+  margin-bottom: 1.80723em;
+}
+
+/* line 245, ../sass/vendor/_normalize.scss */
+h6 {
+  font-size: 0.67em;
+  line-height: 2.23881em;
+  margin-top: 2.23881em;
+  margin-bottom: 2.23881em;
 }
 
 /**
@@ -178,6 +250,7 @@ kbd,
 pre,
 samp {
   font-family: monospace, serif;
+  _font-family: 'courier new', monospace;
   font-size: 1em;
 }
 
@@ -186,7 +259,9 @@ samp {
  */
 /* line 319, ../sass/vendor/_normalize.scss */
 pre {
+  white-space: pre;
   white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 /**
@@ -230,6 +305,42 @@ sub {
 /* ==========================================================================
    Lists
    ========================================================================== */
+/**
+ * Address margins set differently in IE 6/7.
+ */
+/* line 378, ../sass/vendor/_normalize.scss */
+dl,
+menu,
+ol,
+ul {
+  margin: 1.5em 0;
+}
+
+/* line 392, ../sass/vendor/_normalize.scss */
+dd {
+  margin: 0 0 0 40px;
+}
+
+/**
+ * Address paddings set differently in IE 6/7.
+ */
+/* line 402, ../sass/vendor/_normalize.scss */
+menu,
+ol,
+ul {
+  padding: 0 0 0 40px;
+}
+
+/**
+ * Correct list images handled incorrectly in IE 7.
+ */
+/* line 413, ../sass/vendor/_normalize.scss */
+nav ul,
+nav ol {
+  list-style: none;
+  list-style-image: none;
+}
+
 /* ==========================================================================
    Embedded content
    ========================================================================== */
@@ -239,6 +350,8 @@ sub {
 /* line 427, ../sass/vendor/_normalize.scss */
 img {
   border: 0;
+  /* Improve image quality when scaled in IE 7. */
+  -ms-interpolation-mode: bicubic;
 }
 
 /**
@@ -263,6 +376,14 @@ figure {
 /* ==========================================================================
    Forms
    ========================================================================== */
+/**
+ * Correct margin displayed oddly in IE 6/7.
+ */
+/* line 464, ../sass/vendor/_normalize.scss */
+form {
+  margin: 0;
+}
+
 /**
  * Define consistent border, margin, and padding.
  */
@@ -296,6 +417,8 @@ legend {
   /* 1 */
   padding: 0;
   /* 2 */
+  *margin-left: -7px;
+  /* 3 */
 }
 
 /**
@@ -315,6 +438,10 @@ textarea {
   /* 2 */
   margin: 0;
   /* 3 */
+  vertical-align: baseline;
+  /* 4 */
+  *vertical-align: middle;
+  /* 4 */
 }
 
 /**
@@ -357,6 +484,8 @@ input[type="submit"] {
   /* 2 */
   cursor: pointer;
   /* 3 */
+  *overflow: visible;
+  /* 4 */
 }
 
 /**
@@ -383,6 +512,10 @@ input[type="radio"] {
   /* 1 */
   padding: 0;
   /* 2 */
+  *height: 13px;
+  /* 3 */
+  *width: 13px;
+  /* 3 */
 }
 
 /**
@@ -444,29 +577,148 @@ table {
   border-spacing: 0;
 }
 
-/* line 1, ../sass/partial/_base.scss */
-table {
-  margin: 10px;
-  border: 1px solid #dddddd;
-  border-collapse: collapse;
-  border-spacing: 2px;
-  width: 98%;
+/* line 61, ../../../../bin/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+* html {
+  font-size: 100%;
 }
 
-/* line 9, ../sass/partial/_base.scss */
-table tr:nth-child(even) {
-  background-color: #dee3f8;
+/* line 64, ../../../../bin/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+html {
+  font-size: 16px;
+  line-height: 1.5em;
 }
 
-/* line 13, ../sass/partial/_base.scss */
-table td, table th {
-  font-size: 0.875em;
-  padding: 5px 5px;
+/* line 3, ../sass/base/_elements.scss */
+html {
+  font-family: 'Arial';
+  height: 100%;
 }
 
-/* line 18, ../sass/partial/_base.scss */
-table th {
-  background-color: #2541b2;
-  color: white;
-  text-align: left;
+/* line 8, ../sass/base/_elements.scss */
+body {
+  background-color: white;
+  height: 100%;
+}
+
+/* line 13, ../sass/base/_elements.scss */
+a {
+  color: black;
+}
+/* line 15, ../sass/base/_elements.scss */
+a:hover, a:focus {
+  color: black;
+}
+
+/* line 20, ../sass/base/_elements.scss */
+p {
+  margin-top: 0em;
+  margin-bottom: 1.5em;
+}
+/* line 23, ../sass/base/_elements.scss */
+p:last-child {
+  margin-bottom: 0em;
+}
+
+/* line 29, ../sass/base/_elements.scss */
+ul, ol {
+  margin-top: 0em;
+  margin-bottom: 1.5em;
+  padding-left: 2.25em;
+}
+/* line 33, ../sass/base/_elements.scss */
+ul li, ol li {
+  margin-bottom: 0em;
+}
+
+/* line 38, ../sass/base/_elements.scss */
+h1, .h1 {
+  font-size: 2em;
+  line-height: 1.125em;
+  margin-top: 0em;
+  margin-bottom: 0.75em;
+}
+
+/* line 44, ../sass/base/_elements.scss */
+h2, .h2 {
+  font-size: 1.5em;
+  line-height: 1.5em;
+  margin-top: 0em;
+  margin-bottom: 1em;
+}
+
+/* line 50, ../sass/base/_elements.scss */
+h3, .h3 {
+  font-size: 1.1875em;
+  line-height: 1.26316em;
+  margin-top: 0em;
+  margin-bottom: 1.26316em;
+}
+
+/* line 1, ../sass/module/_grid.scss */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 7, ../sass/module/_grid.scss */
+.grid {
+  background: white;
+  margin: 0 0 30px 0;
+}
+/* line 11, ../sass/module/_grid.scss */
+.grid:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* line 18, ../sass/module/_grid.scss */
+[class*='col-'] {
+  float: left;
+  padding-right: 30px;
+}
+/* line 21, ../sass/module/_grid.scss */
+.grid [class*='col-']:last-of-type {
+  padding-right: 0;
+}
+
+/* line 25, ../sass/module/_grid.scss */
+.col-2-3 {
+  width: 66.66%;
+}
+
+/* line 28, ../sass/module/_grid.scss */
+.col-1-3 {
+  width: 33.33%;
+}
+
+/* line 31, ../sass/module/_grid.scss */
+.col-1-2 {
+  width: 50%;
+}
+
+/* line 34, ../sass/module/_grid.scss */
+.col-1-4 {
+  width: 25%;
+}
+
+/* line 37, ../sass/module/_grid.scss */
+.col-1-8 {
+  width: 12.5%;
+}
+
+/* line 40, ../sass/module/_grid.scss */
+.col-7-8 {
+  width: 87.5%;
+}
+
+/* Opt-in outside padding  */
+/* line 45, ../sass/module/_grid.scss */
+.grid-pad {
+  padding: 30px 0 30px 30px;
+}
+/* line 47, ../sass/module/_grid.scss */
+.grid-pad [class*='col-']:last-of-type {
+  padding-right: 30px;
 }
