--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,24 @@
+@charset "utf-8";
+
+// Mixin and function libraries
+// ------------------------------------------------
+
+@import "compass";
+
+// Global config
+@import 'config';
+
+// Vendor CSS libraries
+// ------------------------------------------------
 @import "vendor/normalize";
 
-@import "partial/base";
+// @font-face declarations
+// ------------------------------------------------
+//@import fonts
+
+@import "base/**/*";
+
+@import "module/**/*";
+
+//@import "state"
+
