Cleanup test code and make syntax more parser friendly

--- a/js/template/app.html
+++ b/js/template/app.html
@@ -1,7 +1,6 @@
 <div class="col-3-10 site-middle">
     <div class="filter">
-        <input type="text" id="search" placeholder="filter me"
-               />
+        <input type="text" id="search" placeholder="filter me" />
         <p>Kategori combobox</p>
         <p>Datum från</p>
         <p>Datum till</p>
