--- a/js/template/menu.html
+++ b/js/template/menu.html
@@ -1,10 +1,10 @@
 <nav class="col-2-10 site-left main-menu">
     <ul>
         <li>
-            <a href="/#">Recept</a>
+            <a href="#">Recept</a>
         </li>
         <li>
-            <a href="/#create">Lägg till</a>
+            <a href="#create">Lägg till</a>
         </li>
     </ul>
 </nav>
