--- a/static/assets/sass/base/_elements.scss
+++ b/static/assets/sass/base/_elements.scss
@@ -35,19 +35,19 @@ ul, ol {
   }
 }
 
-h1, .h1 {
+h1 {
   @include adjust-font-size-to(32px);
   @include leader(0);
   @include trailer(1, 32px);
 }
 
-h2, .h2 {
+h2 {
   @include adjust-font-size-to(24px);
   @include leader(0);
   @include trailer(1, 24px);
 }
 
-h3, .h3 {
+h3 {
   @include adjust-font-size-to(19px);
   @include leader(0);
   @include trailer(1, 19px);
